<resources>
    <string name="app_name">PPGbetter</string>
    <string name="Title">PPG Heart Rate Monitor Better</string>
    <string name="Data1">Frame #</string>
    <string name="Data2">Frame Size</string>
    <string name="Data3">AVG</string>
    <string name="Data4">Calculating</string>
    <string name="measurement_button_start">Rozpocznij nagrywanie</string>
    <string name="measurement_button_end">Zatrzymaj nagrywanie</string>
    <string name="measurement_button_start_wd">Wdech (Inhale)</string>
    <string name="measurement_button_end_wy">Wydech (Exhale)</string>
</resources>
