<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.projekcik.MainActivity">

    <!-- Title Text -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <!-- Camera Preview Layout -->
    <RelativeLayout
        android:id="@+id/layout_camera_preview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <com.example.projekcik.javaViewCameraControl
            android:id="@+id/HelloOpenCvView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="gone"
            opencv:show_fps="true"
            opencv:camera_id="any" />
    </RelativeLayout>

    <!-- Data Text Views -->
    <TextView
        android:id="@+id/data1_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Data1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@id/layout_camera_preview"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/data2_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Data2"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@id/data1_head"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@+id/data1_head" />

    <TextView
        android:id="@+id/data3_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Data3"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@id/data2_head"
        android:layout_marginRight="20dp"
        android:layout_alignBaseline="@+id/data2_head"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/data1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Data1"
        android:layout_below="@id/data1_head"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/data2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Data2"
        android:layout_below="@id/data2_head"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@+id/data1" />

    <TextView
        android:id="@+id/data3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Data3"
        android:layout_below="@id/data3_head"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/data2" />

    <!-- Data4 (Main Output) -->
    <TextView
        android:id="@+id/data4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Data4"
        android:textSize="50sp"
        android:layout_below="@id/layout_camera_preview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <!-- Start and Stop Buttons -->
    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Recording"
        android:layout_below="@id/data4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop Recording"
        android:layout_below="@id/buttonStart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:enabled="false" /> <!-- Disabled initially -->


</RelativeLayout>
